Fix early JDK 21 compilation warnings